Fixed list cut off on user page

--- a/client/src/css/List.css
+++ b/client/src/css/List.css
@@ -5,6 +5,7 @@
     width: 100%;
     margin-top: 2rem;
     border-radius: 20px;
+    padding-bottom: 2rem;
 }
 
 .list-container .sorting-header {
